# nativeTech

./: README.md
codeme/cpp-sd/Chapter01/: CMakeLists.txt  README.md
codeme/cpp-sd/Chapter01/cc/cohesion/: high.cpp  low.cpp
codeme/cpp-sd/Chapter01/cc/coupling/: loose.cpp  tight.cpp
codeme/cpp-sd/Chapter01/dry/: bad.cpp  good.cpp
codeme/cpp-sd/Chapter01/philosophy/algorithms/: bad_dots.cpp  good_dots.cpp
codeme/cpp-sd/Chapter01/philosophy/time/: bad_time.cpp  good_time.cpp
codeme/cpp-sd/Chapter01/solid/dip/: bad.cpp  dynamic_dip.cpp  static_dip.cpp
codeme/cpp-sd/Chapter01/solid/isp/: bad.cpp  base.cpp  good.cpp
codeme/cpp-sd/Chapter01/solid/lsp/: bad_substitution.cpp  good_substitution.cpp
codeme/cpp-sd/Chapter01/solid/ocp/: ostream_op_preferred.cpp  ostream_op_private_access_needed.cpp
codeme/cpp-sd/Chapter01/solid/srp/: bad.cpp  good.cpp
codeme/cpp-sd/Chapter02/: CMakeLists.txt  README.md
codeme/cpp-sd/Chapter02/state/: PaymentCalculatorV1.h  PaymentCalculatorV2.h  PaymentCalculatorV3.h
codeme/cpp-sd/Chapter03/: CMakeLists.txt  README.md  requirements.txt
codeme/cpp-sd/Chapter03/doc/: CMakeLists.txt  conf.py.in
codeme/cpp-sd/Chapter03/include/breathe_demo/: demo.h
codeme/cpp-sd/Chapter05/: CMakeLists.txt  README.md  conanfile.txt
codeme/cpp-sd/Chapter05/src/: 1_base.cpp  2_ranges_part_1.cpp  3_ranges_part_2.cpp  4_constexpr.cpp  5_concepts.cpp  6_monadic_expected.cpp  6_monadic_optional.cpp  7_pointers.cpp  8_raii.cpp  9_gsl_asserts.cpp
codeme/cpp-sd/Chapter05/src/apis/: declarative.cpp  inline.h  optional.h
codeme/cpp-sd/Chapter06/: 01_raii_guards.cpp  02_copy_move.cpp  03_rules_of_5_and_0.cpp  04_hidden_friend__copy_and_swap.cpp  05_niebloids.cpp  06_policy-based_design.cpp  07_raii_deducing_this.cpp  07_static_polymorphism_1.cpp  07_static_polymorphism_2.cpp  08_type_erasure.cpp  09_factory_functions.cpp  10_factory_class.cpp  11_builder.cpp  12_state_and_visitation.cpp  13_memory_arena_winking_out.cpp  13_memory_arenas.cpp  14_small_string_optimization.cpp  15_placement_syntax1.cpp  15_placement_syntax2.cpp  15_string_copy_on_write.cpp  CMakeLists.txt  README.md
codeme/cpp-sd/Chapter09/experimental/: CMakeLists.txt  README.md  conanfile.py
codeme/cpp-sd/Chapter09/experimental/src/: main.cpp
codeme/cpp-sd/Chapter09/experimental/test_package/: CMakeLists.txt  conanfile.py  example.cpp
codeme/cpp-sd/Chapter13/: CMakeLists.txt  README.md  conanfile.py
codeme/cpp-sd/Chapter13/coroutines/: CMakeLists.txt  main_1.cpp  main_2.cpp  main_3.cpp  main_4.cpp
codeme/cpp-sd/Chapter13/optimization/: CMakeLists.txt  main_1.cpp  main_2.cpp
codeme/cpp-sd/Chapter13/profiling/: CMakeLists.txt  main_1.cpp
codeme/cpp-sd/Chapter18/: CMakeLists.txt  README.md  conanfile.txt
codeme/cpp-sd/Chapter18/docker/: Dockerfile  README.md
codeme/cpp-sd/Chapter18/kubernetes/: README.md  manifest.yaml  values.yaml
cpp/cpp-guidelines/09_prefer_alias_declarations_to_typedefs/: CMakeLists.txt  linked_list_synonym_with_alias_template01.cpp  linked_list_synonym_with_alias_template02.cpp  linked_list_synonym_with_typedef01.cpp
cpp/cpp-guidelines/13_Prefer_const_iterators_to_iterators/: CMakeLists.txt  insertion_cpp11.cpp
cpp/cpp-guidelines/23_distinguish_universal_references_from_rvalue_references/: CMakeLists.txt  record_time.cpp  rrefs_examples.cpp  urefs_contexts.cpp
cpp/cpp-guidelines/25_avoid_overloading_on_universal_references/: CMakeLists.txt  Person.cpp  logAndAdd_with_uref.cpp
cpp/cpp-guidelines/27_understand_reference_collapsing/: CMakeLists.txt  reference_collapsing_contexts01.cpp  reference_collapsing_contexts01.h
cpp/cpp-guidelines/29_familiarize_yourself_with_perfect_forwarding_failure_cases/: CMakeLists.txt  bitfields.cpp  braced_initializers.cpp  null_pointers.cpp  overloaded_function_names_and_template_names.cpp
cpp/cpp-guidelines/31_use_init_capture_to_move_objects_into_closures/: CMakeLists.txt  Widget.cpp  init_capture_cpp14.cpp  move_capture1_cpp11.cpp  move_capture1_cpp14.cpp  move_capture2.cpp
cpp/guidelines/03_understand_decltype/: CMakeLists.txt  compute_function_return_type_cpp11.h  decltype_for_complicated_lvalues.cpp  return_statements_cpp14.cpp  things_to_remember.txt  typical_cases.cpp
cpp/guidelines/05_prefer_auto_to_explicit_type_declarations/: CMakeLists.txt
cpp/guidelines/08_prefer_nullptr_to_0_and_NULL/: CMakeLists.txt  code_clarity.cpp  template_example_flat.cpp  template_example_templatized.cpp  template_example_templatized_cpp14.cpp
cpp/guidelines/17_use_std_unique_ptr_for_exclusive-ownership_resource_management/: CMakeLists.txt  investments_cpp14.cpp
cpp/guidelines/20_prefer_std_make_unique_and_std_make_shared_to_direct_use_of_new/: CMakeLists.txt  limitations_of_make_functions.cpp
cpp/guidelines/22_understand_std_move_and_std_forward/: CMakeLists.txt  annotation.cpp  move_constructor_with_forward.cpp  typical_use_of_std_forward.cpp  typical_use_of_std_forward.h
cpp/guidelines/24_use_std_move_on_rvalue_references_std_forward_on_universal_references/: CMakeLists.txt  return_value_optimization.cpp
cpp/guidelines/26_familiarize_yourself_with_alternatives_to_overloading_on_universal_references/: CMakeLists.txt  alternative_pass_by_value.cpp  constraining_templates01.cpp  constraining_templates02_cpp11.cpp  constraining_templates04_cpp14.cpp
cpp/guidelines/34_prefer_task-based_programming_to_thread-based/: CMakeLists.txt
rust/cargo/data-processor/: Cargo.toml  build.rs
rust/cargo/data-processor/src/: lib.rs
rust/design-patterns/session-state-machine/: Cargo.toml
rust/design-patterns/session-state-machine/src/: fsm.rs  main.rs
rust/io/action_kv1/: Cargo.toml
rust/io/action_kv1/src/: akv_mem.rs  lib.rs
rust/macros/my-proc-macro/: Cargo.toml
rust/macros/my-proc-macro/src/: lib.rs
rust/macros/my-proc-macro/usage/: Cargo.toml
rust/web-svc/api-client/: Cargo.toml
rust/web-svc/api-client/src/: main.rs
rust/web-svc/api-service/: Cargo.toml
rust/web-svc/api-service/migrations/: 20230701202642_todos.sql
rust/web-svc/api-service/src/: api.rs  error.rs  main.rs  router.rs  todo.rs
(+3407 files in other folders)
