[package]
name = "data-processor"
version = "0.1.0"
edition = "2024"
description = "Приложение для обработки данных с сервером и клиентом"
authors = ["Ваше Имя "]
license = "MIT"

[lib]
name = "processor_lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }                 # Сериализация данных
tokio = { version = "^1.20", features = ["full"], optional = true }  # Асинхронность
serde_json = "1.0.149"

[features]
default = ["async"]
async = ["tokio"]
