[package]
name = "session-state-machine"
version = "0.1.0"
edition = "2024"

[dependencies]
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
