[package]
name = "action_kv1"
version = "0.1.0"
edition = "2021"

[dependencies]
crc = "1.7"
byteorder = "1.2"
serde = "1"
serde_derive = "1"

[lib]
name = "libactionkv"
path = "src/lib.rs"

# [[]] is needed because of TOML's array syntax. A crate may have multiple binaries, but only a single library.
[[bin]]
name = "action_kv1"
path = "src/akv_mem.rs"