[package]
name = "my_proc_macro"
version = "0.0.0"
authors = ["Denis Vinevcev <dwinner@inbox.ru>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
