[package]
name = "api-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.*"
chrono = { version = "0.4.*", features = ["serde"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.*"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "macros",
] }
tokio = { version = "1.*", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
